[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rns-covert-transport"
version = "0.1.3"
description = "Reticulum Network Stack interfaces for censorship-resistant communication over everyday services"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
keywords = [
    "reticulum",
    "censorship",
    "mesh",
    "encryption",
    "email",
    "imap",
    "smtp",
    "anti-censorship",
    "privacy",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Email",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Networking",
]
dependencies = [
    "rns>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/TechVoid-Co/rns-covert-transport"
Repository = "https://github.com/TechVoid-Co/rns-covert-transport"
Issues = "https://github.com/TechVoid-Co/rns-covert-transport/issues"
Documentation = "https://github.com/TechVoid-Co/rns-covert-transport#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["rns_covert*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
